--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,6 @@ a, button {
 .bg-t-edge {
     background: top no-repeat;
 }
-
 .b-parallax {
     background-attachment: fixed;
 }
@@ -55,9 +54,6 @@ a, button {
 }
 .d-bloc .divider-h span {
     border-color: rgba(255, 255, 255, .2);
-}
-.d-bloc .a-btn,.d-bloc .navbar a,.d-bloc .navbar-brand,.d-bloc a .icon-sm,.d-bloc a .icon-md,.d-bloc a .icon-lg,.d-bloc a .icon-xl,.d-bloc h1 a,.d-bloc h2 a,.d-bloc h3 a,.d-bloc h4 a,.d-bloc h5 a,.d-bloc h6 a,.d-bloc p a {
-    color: rgba(255, 255, 255, .6);
 }
 .d-bloc .a-btn:hover,.d-bloc .navbar a:hover,.d-bloc .navbar-brand:hover,.d-bloc a:hover .icon-sm,.d-bloc a:hover .icon-md,.d-bloc a:hover .icon-lg,.d-bloc a:hover .icon-xl,.d-bloc h1 a:hover,.d-bloc h2 a:hover,.d-bloc h3 a:hover,.d-bloc h4 a:hover,.d-bloc h5 a:hover,.d-bloc h6 a:hover,.d-bloc p a:hover {
     color: rgba(255, 255, 255, 1);
@@ -118,9 +114,11 @@ a, button {
 }
 .voffset {
     margin-top: 30px;
+    justify-content: center;
 }
 .voffset-lg {
     margin-top: 80px;
+    justify-content: center;
 }
 .row-no-gutters {
     margin-right: 0;
@@ -287,6 +285,8 @@ button {
 }
 .icon-md {
     font-size: 30px!important;
+    color: white;
+    font-weight: bold;
 }
 .icon-lg {
     font-size: 60px!important;
@@ -420,7 +420,7 @@ a[data-lightbox]:hover img {
 h1,h2,h3,h4,h5,h6,p,label,.btn,a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
+    color: #575757;
 }
 .container {
     max-width: 1000px;
@@ -441,7 +441,7 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a {
     margin: auto auto auto auto;
 }
 p {
-    font-size: 11px;
+    font-size: 15px;
 }
 .tight-width-whitespace {
     max-width: 600px;
@@ -461,7 +461,10 @@ p {
 }
 .social {
     max-width: 400px;
-    margin: auto auto auto auto;
+    margin: auto;
+    color: white;
+    font-weight: bolder;
+    font-size: 1.1rem;
 }
 h2 {
     font-size: 22px;
@@ -502,7 +505,7 @@ h4 {
     box-shadow: 0px 4px 9px rgba(0, 0, 0, 0.3);
 }
 .black-background {
-    background-color: rgba(165, 147, 99, 0.7);
+    background-color: rgba(91,84,52,0.9);
     padding: 40px 40px 40px 40px;
 }
 .bold-link {
@@ -516,13 +519,13 @@ h4 {
     background-color: #364577;
 }
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #85310A;
 }
 .tc-white {
-    color: #F3976C!important;
+    color: white!important;
 }
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background: #85310A;
     color: #FFFFFF!important;
 }
 .btn-atomic-tangerine:hover {
@@ -536,7 +539,7 @@ h4 {
     color: #cccccc!important;
 }
 .ltc-atomic-tangerine {
-    color: #F3976C!important;
+    color: #85310A!important;
 }
 .ltc-atomic-tangerine:hover {
     color: #c27956!important;
@@ -556,6 +559,9 @@ h4 {
 }
 .bg-presentation {
     background-image: url("../img/image-de-presentation.bmp");
+}
+.img-responsive {
+    width: 100%;
 }
 /*
 =====================================================================
