--- a/css/style.css
+++ b/css/style.css
@@ -558,7 +558,7 @@ h4 {
     background-image: url("../img/agence-la-panthere.jpg");
 }
 .bg-presentation {
-    background-image: url("../img/image-de-presentation.bmp");
+    background-image: url("../img/image-de-presentation.jpg");
 }
 .img-responsive {
     width: 100%;
