--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ a, button {
 .bloc-sm {
     padding: 20px 50px;
 }
-.bg-center,.bg-l-edge,.bg-r-edge,.bg-t-edge,.bg-b-edge,.bg-tl-edge,.bg-bl-edge,.bg-tr-edge,.bg-br-edge,.bg-repeat {
+.bg-t-edge,.bg-repeat {
     background-size: auto!important;
 }
 .bg-repeat {
@@ -49,68 +49,26 @@ a, button {
 .d-bloc button:hover {
     color: rgba(255, 255, 255, .9);
 }
-.d-bloc .icon-round,.d-bloc .icon-square,.d-bloc .icon-rounded,.d-bloc .icon-semi-rounded-a,.d-bloc .icon-semi-rounded-b {
-    border-color: rgba(255, 255, 255, .9);
-}
-.d-bloc .divider-h span {
-    border-color: rgba(255, 255, 255, .2);
-}
-.d-bloc .a-btn:hover,.d-bloc .navbar a:hover,.d-bloc .navbar-brand:hover,.d-bloc a:hover .icon-sm,.d-bloc a:hover .icon-md,.d-bloc a:hover .icon-lg,.d-bloc a:hover .icon-xl,.d-bloc h1 a:hover,.d-bloc h2 a:hover,.d-bloc h3 a:hover,.d-bloc h4 a:hover,.d-bloc h5 a:hover,.d-bloc h6 a:hover,.d-bloc p a:hover {
+.d-bloc .navbar a:hover,.d-bloc .navbar-brand:hover,.d-bloc a:hover .icon-sm,.d-bloc a:hover .icon-md,.d-bloc a:hover .icon-lg,.d-bloc a:hover .icon-xl,.d-bloc h1 a:hover,.d-bloc h2 a:hover,.d-bloc h3 a:hover,.d-bloc h4 a:hover,.d-bloc h5 a:hover,.d-bloc h6 a:hover,.d-bloc p a:hover {
     color: rgba(255, 255, 255, 1);
 }
 .d-bloc .navbar-toggle .icon-bar {
     background: rgba(255, 255, 255, 1);
 }
-.d-bloc .btn-wire,.d-bloc .btn-wire:hover {
-    color: rgba(255, 255, 255, 1);
-    border-color: rgba(255, 255, 255, 1);
-}
-.d-bloc .panel {
+.l-bloc {
     color: rgba(0, 0, 0, .5);
 }
-.d-bloc .panel button:hover {
+.l-bloc button:hover {
     color: rgba(0, 0, 0, .7);
 }
-.d-bloc .panel icon {
-    border-color: rgba(0, 0, 0, .7);
-}
-.d-bloc .panel .divider-h span {
-    border-color: rgba(0, 0, 0, .1);
-}
-.d-bloc .panel .a-btn {
+.l-bloc .navbar a,.l-bloc .navbar-brand,.l-bloc a .icon-sm,.l-bloc a .icon-md,.l-bloc a .icon-lg,.l-bloc a .icon-xl,.l-bloc h1 a,.l-bloc h2 a,.l-bloc h3 a,.l-bloc h4 a,.l-bloc h5 a,.l-bloc h6 a,.l-bloc p a {
     color: rgba(0, 0, 0, .6);
 }
-.d-bloc .panel .a-btn:hover {
-    color: rgba(0, 0, 0, 1);
-}
-.d-bloc .panel .btn-wire,.d-bloc .panel .btn-wire:hover {
-    color: rgba(0, 0, 0, .7);
-    border-color: rgba(0, 0, 0, .3);
-}
-.d-bloc .panel,.l-bloc {
-    color: rgba(0, 0, 0, .5);
-}
-.d-bloc .panel button:hover,.l-bloc button:hover {
-    color: rgba(0, 0, 0, .7);
-}
-.l-bloc .icon-round,.l-bloc .icon-square,.l-bloc .icon-rounded,.l-bloc .icon-semi-rounded-a,.l-bloc .icon-semi-rounded-b {
-    border-color: rgba(0, 0, 0, .7);
-}
-.d-bloc .panel .divider-h span,.l-bloc .divider-h span {
-    border-color: rgba(0, 0, 0, .1);
-}
-.d-bloc .panel .a-btn,.l-bloc .a-btn,.l-bloc .navbar a,.l-bloc .navbar-brand,.l-bloc a .icon-sm,.l-bloc a .icon-md,.l-bloc a .icon-lg,.l-bloc a .icon-xl,.l-bloc h1 a,.l-bloc h2 a,.l-bloc h3 a,.l-bloc h4 a,.l-bloc h5 a,.l-bloc h6 a,.l-bloc p a {
-    color: rgba(0, 0, 0, .6);
-}
-.d-bloc .panel .a-btn:hover,.l-bloc .a-btn:hover,.l-bloc .navbar a:hover,.l-bloc .navbar-brand:hover,.l-bloc a:hover .icon-sm,.l-bloc a:hover .icon-md,.l-bloc a:hover .icon-lg,.l-bloc a:hover .icon-xl,.l-bloc h1 a:hover,.l-bloc h2 a:hover,.l-bloc h3 a:hover,.l-bloc h4 a:hover,.l-bloc h5 a:hover,.l-bloc h6 a:hover,.l-bloc p a:hover {
+.l-bloc .navbar a:hover,.l-bloc .navbar-brand:hover,.l-bloc a:hover .icon-sm,.l-bloc a:hover .icon-md,.l-bloc a:hover .icon-lg,.l-bloc a:hover .icon-xl,.l-bloc h1 a:hover,.l-bloc h2 a:hover,.l-bloc h3 a:hover,.l-bloc h4 a:hover,.l-bloc h5 a:hover,.l-bloc h6 a:hover,.l-bloc p a:hover {
     color: rgba(0, 0, 0, 1);
 }
 .l-bloc .navbar-toggle .icon-bar {
     color: rgba(0, 0, 0, .6);
-}
-.d-bloc .panel .btn-wire,.d-bloc .panel .btn-wire:hover,.l-bloc .btn-wire,.l-bloc .btn-wire:hover {
-    color: rgba(0, 0, 0, .7);
-    border-color: rgba(0, 0, 0, .3);
 }
 .voffset {
     margin-top: 30px;
@@ -165,9 +123,6 @@ a, button {
     margin-top: 4px;
     font-size: 16px;
 }
-.navbar-nav .open .dropdown-menu > li > a {
-    text-align: inherit;
-}
 .nav > li a:hover,.nav > li a:focus {
     background: transparent;
 }
@@ -181,14 +136,6 @@ a, button {
 .navbar-toggle .icon-bar {
     background-color: rgba(0, 0, 0, .5);
     width: 26px;
-}
-.nav-invert .navbar .nav {
-    float: left;
-}
-.nav-invert .navbar-header,.nav-invert .navbar-brand {
-    float: right;
-    position: relative;
-    z-index: 2;
 }
 @media (min-width: 768px) {
     .site-navigation {
@@ -234,25 +181,6 @@ a, button {
 nav .caret {
     margin: 0 5px;
 }
-.dropdown-menu .dropdown-menu {
-    top: -8px;
-    left: 100%;
-}
-.dropdown-menu .dropmenu-flow-right {
-    top: 100%;
-    left: 0;
-    margin-left: -1px;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-}
-.dropdown-menu .dropdown span {
-    border: 4px solid black;
-    border-top-color: transparent;
-    border-right-color: transparent;
-    border-bottom-color: transparent;
-    margin: 6px -5px 0 0!important;
-    float: right;
-}
 .mg-md {
     margin-top: 10px;
     margin-bottom: 20px;
@@ -263,9 +191,6 @@ nav .caret {
 }
 .btn {
     margin: 0 5px 5px 0;
-}
-.btn.pull-right {
-    margin: 0 0 5px 5px;
 }
 .btn-d,.btn-d:hover,.btn-d:focus {
     color: #FFF;
@@ -293,18 +218,6 @@ button {
 }
 .sm-shadow {
     text-shadow: 0 1px 2px rgba(0, 0, 0, .3);
-}
-.panel-sq,.panel-sq .panel-heading,.panel-sq .panel-footer {
-    border-radius: 0;
-}
-.panel-rd {
-    border-radius: 30px;
-}
-.panel-rd .panel-heading {
-    border-radius: 29px 29px 0 0;
-}
-.panel-rd .panel-footer {
-    border-radius: 0 0 29px 29px;
 }
 .form-control {
     border-color: rgba(0, 0, 0, .1);
@@ -417,39 +330,15 @@ a[data-lightbox]:hover img {
     color: rgba(0, 0, 0, .5);
     background: none;
 }
-h1,h2,h3,h4,h5,h6,p,label,.btn,a {
-    font-family: "helvetica";
-    font-weight: 400;
-    color: #575757;
-}
 .container {
     max-width: 1000px;
 }
 .hero-bloc-text {
     font-size: 38px;
 }
-.hero-bloc-text-sub {
-    font-size: 36px;
-}
-.statement-bloc-text {
-    line-height: 26px;
-    font-style: italic;
-    font-size: 20px;
-    text-align: center;
-    font-weight: lighter;
-    max-width: 520px;
-    margin: auto auto auto auto;
-}
-p {
-    font-size: 15px;
-}
 .tight-width-whitespace {
     max-width: 600px;
     margin: auto auto auto auto;
-}
-.h1 {
-    font-size: 20px;
-    font-family: "Open Sans";
 }
 .cta-hero {
     margin-top: 22px;
@@ -466,6 +355,17 @@ p {
     font-weight: bolder;
     font-size: 1.1rem;
 }
+h1,h2,h3,h4,h5,h6,p,label,.btn,a {
+    font-family: "helvetica";
+    font-weight: 400;
+    color: #575757;
+}
+p {
+    font-size: 15px;
+}
+h1 {
+    color: #333333!important;
+}
 h2 {
     font-size: 22px;
     line-height: 1.4em;
@@ -476,16 +376,13 @@ h3 {
     font-weight: 700;
     color: #333333!important;
 }
+h4 {
+    color: #333333!important;
+}
 .med-width-whitespace {
     max-width: 800px;
     margin: auto auto auto auto;
     box-shadow: 0px 0px 0px #000000;
-}
-h1 {
-    color: #333333!important;
-}
-h4 {
-    color: #333333!important;
 }
 .icons {
     margin-bottom: 14px;
@@ -500,9 +397,6 @@ h4 {
 .portfolio-row {
     margin-bottom: 44px;
     margin-top: 50px;
-}
-.avatar {
-    box-shadow: 0px 4px 9px rgba(0, 0, 0, 0.3);
 }
 .black-background {
     background-color: rgba(91,84,52,0.9);
@@ -563,18 +457,10 @@ h4 {
 .img-responsive {
     width: 100%;
 }
-/*
-=====================================================================
-==================== Début Media Queries Desktop ====================
-=====================================================================*/
 @media (max-width: 1024px) {
     .bloc {
         padding-left: 20px;
         padding-right: 20px;
-    }
-    .bloc.full-width-bloc,.bloc-tile-2.full-width-bloc .container,.bloc-tile-3.full-width-bloc .container,.bloc-tile-4.full-width-bloc .container {
-        padding-left: 0;
-        padding-right: 0;
     }
 }
 @media (max-width: 992px) and (min-width: 768px) {
@@ -606,20 +492,13 @@ h4 {
         overflow-x: hidden;
         position: relative;
     }
-    .bloc-group,.bloc-group .bloc {
-        display: block;
-        width: 100%;
-    }
-    .bloc-fill-screen .fill-bloc-top-edge,.bloc-fill-screen .fill-bloc-bottom-edge {
-        padding: 0 20px;
-    }
 }
 @media (max-width: 767px) {
     .page-container {
         overflow-x: hidden;
         position: relative;
     }
-    h1,h2,h3,h4,h5,h6,p,#disqus_thread {
+    h1,h2,h3,h4,h5,h6,p {
         padding-left: 10px!important;
         padding-right: 10px!important;
     }
@@ -692,22 +571,12 @@ h4 {
         padding-left: 0;
         padding-right: 0;
     }
-    .bloc-xxl,.bloc-xl,.bloc-lg {
+    .bloc-lg {
         padding: 40px 0;
     }
     .bloc-sm,.bloc-md {
         padding-left: 0;
         padding-right: 0;
-    }
-    .bloc-tile-2 .container,.bloc-tile-3 .container,.bloc-tile-4 .container,.bloc-fill-screen .fill-bloc-top-edge,.bloc-fill-screen .fill-bloc-bottom-edge {
-        padding-left: 0;
-        padding-right: 0;
-    }
-    .a-block {
-        padding: 0 10px;
-    }
-    .btn-dwn {
-        display: none;
     }
     .voffset {
         margin-top: 5px;
@@ -721,28 +590,10 @@ h4 {
     form {
         padding: 5px;
     }
-    .close-lightbox {
-        display: inline-block;
-    }
-    .blocsapp-device-iphone5 {
-        background-size: 216px 425px;
-        padding-top: 60px;
-        width: 216px;
-        height: 425px;
-    }
-    .blocsapp-device-iphone5 img {
-        width: 180px;
-        height: 320px;
-    }
 }
 @media (max-width: 400px) {
     .bloc {
         padding-left: 0;
         padding-right: 0;
-    }
-}
-@media (max-width: 767px) {
-    .bloc-mob-center-text {
-        text-align: center;
     }
 }
