--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,11 @@ a, button {
     margin-top: 4px;
     font-size: 16px;
 }
+
+.navbar-nav .open .dropdown-menu > li > a {
+    text-align: inherit;
+}
+
 .nav > li a:hover,.nav > li a:focus {
     background: transparent;
 }
@@ -180,6 +185,25 @@ a, button {
 }
 nav .caret {
     margin: 0 5px;
+}
+.dropdown-menu .dropdown-menu {
+    top: -8px;
+    left: 100%;
+}
+.dropdown-menu .dropmenu-flow-right {
+    top: 100%;
+    left: 0;
+    margin-left: -1px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+}
+.dropdown-menu .dropdown span {
+    border: 4px solid black;
+    border-top-color: transparent;
+    border-right-color: transparent;
+    border-bottom-color: transparent;
+    margin: 6px -5px 0 0!important;
+    float: right;
 }
 .mg-md {
     margin-top: 10px;
