--- a/css/style.css
+++ b/css/style.css
@@ -479,10 +479,10 @@ h4 {
     background-image: url("../img/lines-h2-bg.png");
 }
 .bg-banniere {
-    background-image: url("../img/agence-la-panthere.jpg");
+    background-image: url("../img/agence-la-panthere.webp");
 }
 .bg-presentation {
-    background-image: url("../img/image-de-presentation.jpg");
+    background-image: url("../img/image-de-presentation.webp");
 }
 .img-responsive {
     width: 100%;
