--- a/css/style.css
+++ b/css/style.css
@@ -61,9 +61,6 @@ a, button {
 .l-bloc button:hover {
     color: rgba(0, 0, 0, .7);
 }
-.l-bloc .navbar a,.l-bloc .navbar-brand,.l-bloc a .icon-sm,.l-bloc a .icon-md,.l-bloc a .icon-lg,.l-bloc a .icon-xl,.l-bloc h1 a,.l-bloc h2 a,.l-bloc h3 a,.l-bloc h4 a,.l-bloc h5 a,.l-bloc h6 a,.l-bloc p a {
-    color: rgba(0, 0, 0, .6);
-}
 .l-bloc .navbar a:hover,.l-bloc .navbar-brand:hover,.l-bloc a:hover .icon-sm,.l-bloc a:hover .icon-md,.l-bloc a:hover .icon-lg,.l-bloc a:hover .icon-xl,.l-bloc h1 a:hover,.l-bloc h2 a:hover,.l-bloc h3 a:hover,.l-bloc h4 a:hover,.l-bloc h5 a:hover,.l-bloc h6 a:hover,.l-bloc p a:hover {
     color: black;
 }
@@ -452,6 +449,9 @@ h4 {
 .tc-white {
     color: white!important;
 }
+.tc-black {
+    color: black!important;
+}
 .btn-atomic-tangerine {
     background: #f3976c;
     font-weight: bold;
@@ -491,6 +491,10 @@ h4 {
 }
 .img-responsive {
     width: 100%;
+}
+figure {
+    color: black;
+    font-size: 1.5rem;
 }
 @media (max-width: 1024px) {
     .bloc {
@@ -631,9 +635,4 @@ h4 {
         padding-left: 0;
         padding-right: 0;
     }
-}
-
-figure {
-    color: black;
-    font-size: 1.5rem;
 }
